avance pour le dark mode

--- a/Index.html
+++ b/Index.html
@@ -17,8 +17,12 @@
 </head>
 
 <body class="container-fluid bg-light bg-opacity-50 p-0 m-0">
-
-    <button class="btn btn-outline-dark shadow rounded mt-3 ms-3" id="darkButton">Mode-Night</button>
+    
+    <div class="form-check form-switch">
+        <input class="form-check-input shadow mt-4 ms-3 me-3" type="checkbox" role="switch" id="darkButton">
+        <label class="form-check-label mt-3 ms-3 fw-bold" for="darkButton">Mode-Night</label>
+    </div>
+    
 
     <header class="container mb-5">
 
@@ -43,7 +47,7 @@
 
     </header>
 
-    <section class="container justify-content-center align-content-center" id="dark-mode">
+    <section class="container justify-content-center align-content-center">
 
         <!--Experience Professionel, deux (div) pour display:Grid (columns) -->
         <div class="row">
